drobne poprawki backend/frontend

--- a/wats/static/style.css
+++ b/wats/static/style.css
@@ -9,46 +9,67 @@ body {
 }
 
 .content {
-    display: flex;
-    border-radius: 25px;
-    background: #ffffff;
-    /* to jest odleglosc szarego na stronie */
-    margin: 2%;
-    padding: 3em;
     width: 100%;
-    justify-content: space-around;
-    box-shadow: 5px 5px 15px 20px rgb(184, 184, 184);
+    display: flex;
+    min-height: 100vh;
 }
 
 .sidebar {
     width: 20%;
+    background: white;
+    padding: 24px 1px 24px 24px;
+    height: 100%;
+    display: flex;
+    box-shadow: 10px 0px 10px #CCC;
 }
 
 .application {
     width: 80%;
-    border: 1px solid yellow;
-    outline-style: solid;
-    outline-color: red;
-    outline-width: thin;
-}
-.application h1 {
     display: flex;
-    align-items: center;
-    justify-content: center;
+    flex-direction: row;
 }
 
 nav {
-    width: 70%;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    padding: 5%;
+    width: 100%;
 }
 
 nav a {
     margin-top: 10%;
     color: rgb(17, 17, 17);
     font-size: 25px;
+}
+
+.menu_icon {
+    display: flex;
+    margin: 10px 0px;
+    padding: 6px;
+    text-decoration: none;
+    border-radius: 10px;
+    margin-right: -44px;
+}
+
+.sidebar #logo {
+    width: 215px;
+    margin-bottom: 13px;
+}
+
+.menu_icon:hover {
+    border-left: 10px solid #013C00;
+}
+
+.menu_icon img {
+    width: 46px;
+    height: 46px;
+}
+
+.menu_icon p {
+    margin: 7px 0px 0px 10px;
+}
+
+.menu_icon_selected {
+    background: #e2e2e2;
 }
 
 form {
@@ -68,151 +89,272 @@ input[type=text] {
     padding: 3%;
 }
 
-.scenario-index {
-    width: 100%;
-    height: 100%;
-    margin: 1%;
+.content-box {
+    padding: 6px 36px;
+    flex: auto;
+}
 
+.content-header {
+    border-bottom: 1px solid #AAA;
+    margin-bottom: 24px;
+}
+
+
+.content-form {
+    background: white;
+    padding: 24px;
+    border-radius: 20px;
+    margin: 13px;
     display: flex;
-    justify-content: flex-start;
     flex-direction: column;
-    align-items: center;
+}
+
+.scenario-table {
+    margin-top: 16px;
+    margin-bottom: 16px;
+}
+
+.scenario-table thead {
+    font-weight: bold;
+}
+
+.scenario-table tr {
+    height: 48px;
 
 }
 
-.scenario-list-container {
-    width: 100%;
-    height: 100%;
-    margin: 1%;
+.scenario-table-select {
+    width: 28px;
+}
 
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
+.scenario-table-select input {
+        appearance: none;
+        border: 4px solid white;
+        outline: 1px solid black;
+        width: 18px;
+        height: 18px;
+        border-radius: 9px;
+}
+
+.scenario-table-select input:checked {
+    background: black
+}
+
+.scenario-table-name {
 
 }
 
-.scenario-list-item {
-    width: 90%;
+.scenario-table-author {
+
+width: 200px;
+}
+
+
+.scenario-table-actions {width: 100px;}
+
+.content-form-title {
+    margin: -24px -24px 0px -24px;color: #444;border-bottom: 1px solid lightgray;
     display: flex;
-    margin: 2%;
+}
+
+.content-form-buttons {
+    margin: 0px -24px -24px -24px;
+    color: #444;
+    padding: 16px;
+    display: flex;
+    flex-direction: row;
+    border-top: 1px solid lightgray;
+}
+
+.content-form-buttons button:first-child {
+    margin-left: auto;
+}
+
+.content-form-buttons button {
+    margin-right: 8px;
+}
+
+.content-form-title h2 {
+    margin: 18px;
+}
+
+.content-form-title h3 {
+    margin: 18px;
+}
+
+.cbutton {padding: 8px;border-radius: 9px;border: none;background: #013C00;color: white;}
+
+.cbutton:hover {
+    background: #1e491e;
+    cursor: pointer;
+}
+
+.cbutton:focus {
+    outline: 4px solid #1e491e3b;
+}
+
+.cbutton.caution {
+    background: #a80b0b
+}
+
+.cbutton.caution:hover {
+    background: #b42828;
+}
+
+.cbutton.caution:focus {
+    outline: 4px solid #a80b0b61;
+}
+
+.content-header .content-form-buttons .cbutton {
+    height: min-content;
+    margin-left: auto;
+    margin-top: auto;
+    margin-bottom: auto;
+}
+
+.scenario-creation-metadata .field {
+    display: flex;
+    flex-direction: row;
+}
+
+.scenario-creation-metadata .label {
+    width: 200px;
+    display: block;
+    margin-top: auto;
+    margin-bottom: auto;
+}
+
+.scenario-section {
+    margin-top: 24px;
+}
+
+.scenario-creation-step,
+.scenario-creation-step-settings{
+    display: flex;
+    flex-direction: row;
+    flex: auto;
+}
+
+.scenario-creation-select,
+.scenario-creation-step-settings > input {
+    margin: 12px;
+    padding: 6px;
+}
+
+.tooltip {
+    position: relative;
+    height: 20px;
+    width: 20px;
+    border-radius: 24px;
+    text-align: center;
+    padding: 0px;
+    font-size: 18px;
+    display: inline-block;
+    margin-top: auto;
+    margin-bottom: auto;
     border: 1px solid black;
-    justify-content: space-between;
-    flex-direction: row;
-}
-.scenario-list-buttons{
-    display: flex;
-    justify-content: space-around;
-    width:50%;
 }
 
+.tooltip .tooltiptext {
+  visibility: hidden;
+  width: 120px;
+  background-color: #0007;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 5px 0;
 
-.scenario-information {
-    display: flex;
-    justify-content: space-between;
-    flex-direction: row;
-    width: 80%;
+  /* Position the tooltip */
+  position: absolute;
+  z-index: 1;
+  top: -5px;
+  left: 105%;
+  padding: 12px;
+  font-size: medium;
 }
 
-.scenario-information-details {
-    display: flex;
+.tooltip:hover .tooltiptext {
+  visibility: visible;
+}
+
+.scenario-creation-step-remove {
+    margin-top: auto;
+    margin-bottom: auto;
+    margin-left: auto;
+}
+
+.dialog-frame {
+    position: fixed;
+    background: white;
+    width: 600px;
+    box-shadow: 0px 0px 22px grey;
+    border-radius: 22px;
+    height: 400px;
     flex-direction: column;
-    margin: 1%;
+    display: none;
+    top: 50%;
+    left: 50%;
+    margin-top: -200px;
+    margin-left: -300px;
 }
 
-.scenario-information-select {
-    font-variant: small-caps;
-    font-size: small;
-    border-right: 1px solid black;
+.dialog-visible {
     display: flex;
-    justify-content: center;
-    flex-direction: column;
-    margin: 1%;
-    width: 6%;
 }
 
-.scenario-information-name {
-    font-size: 1em;
-    color: rgb(0, 0, 0);
-    text-shadow: 1px, 1px;
-}
-
-.scenario-information-status {
-    font-size: 1em;
-    color: rgb(137, 137, 137)
-}
-
-.scenario-creation-metadata {
-    display: flex;
-    justify-content: space-between;
-    flex-direction: column;
-    align-items: flex-start;
-    margin: 10px, 0, 0, 15px;
-}
-
-.scenario-creation-metadata p {
-    font-size: 1em;
-    color: rgb(92, 92, 92);
-}
-
-.scenario-creation-table {
-    display: flex;
-    justify-content: space-between;
-    flex-direction: column;
-    align-items: flex-start;
-
-    border-radius: 10px;
-    background: #dddddd;
-    /* to jest odleglosc szarego na stronie */
-    margin: 1%;
-    padding: 3em;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-}
-
-.scenario-creation-table button {
-    margin: 10px;
-}
-
-.scenario-creation-select {
-    margin: 0;
-}
-
-.scenario-creation-step {
+.dialog-header {
+    padding: 12px;
     display: flex;
     flex-direction: row;
-
-    align-items: flex-start;
-    width: 100%;
-
-    margin: 10px;
+    border-bottom: 1px solid lightgray;
 }
 
-.scenario-creation-step-changed {
+.dialog-title {
+    padding: 0px;
+    margin: 0px;
+}
+
+.dialog-content {
+    padding: 12px;
+    overflow: auto;
+    flex: auto;
+}
+
+.dialog-footer {
+    padding: 12px;
+    border-top: 1px solid lightgray;
     display: flex;
-    width: 100%;
-    justify-content: space-between;
+}
+
+.dialog-pager {
+    display: flex;
     flex-direction: row;
-
-    margin: 10px;
+    margin-left: auto;
 }
 
-.scenario-creation-step-settings {
-    display: flex;
-    justify-content: space-between;
-    flex-direction: row;
-    width: 80%;
-    margin: 0px 50px 10px 50px;
+.dialog-pager * {
+    margin-top: auto;
+    white-space: pre;
+    margin-bottom: auto;
 }
 
-.scenario-creation-step-settings_clickenter {
-    display: flex;
-    justify-content: end;
-    flex-direction: row;
-    width: 80%;
-    margin: 0px 50px 10px 50px;
+.dialog-page,
+.dialog-page-max {
+    display: inline;
 }
 
-.scenario-creation-submitbuttons {
-    display: flex;
-    justify-content: space-around;
+.pager-nav {
+    padding: 0px;
+    height: 16px;
+    width: 16px;
+    border-radius: 12px;
+}
+
+.disabled {
+    background: lightgray;
+}
+
+.content-header-buttons {
+    height: min-content;
+    margin: auto 16px auto auto;
 }
