--- a/wats/static/style.css
+++ b/wats/static/style.css
@@ -153,13 +153,13 @@ width: 200px;
 .scenario-table-actions {width: 100px;}
 
 .content-form-title {
-    margin: -24px -24px 0px -24px;color: #444;border-bottom: 1px solid lightgray;
+    margin: -24px -24px 0px -24px;
+    border-bottom: 1px solid lightgray;
     display: flex;
 }
 
 .content-form-buttons {
     margin: 0px -24px -24px -24px;
-    color: #444;
     padding: 16px;
     display: flex;
     flex-direction: row;
