--- a/wats/templates/scenario_add.html
+++ b/wats/templates/scenario_add.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="content-box">
     <div class="content-header">
-            <h1> Scenariusze testowe </h1>
+            <h1> Dodawanie scenariusza </h1>
     </div>
     <div class="content-form">
 
